--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="app-grid">
         <a
-          href="https://linkedin.com/in/yourprofile"
+          href="https://www.linkedin.com/in/suthasiv/"
           target="_blank"
           class="app-icon"
         >
@@ -58,18 +58,14 @@
           <span class="app-label">Email</span>
         </a>
 
-        <a href="tel:+1234567890" class="app-icon">
+        <a href="tel:+4167107465" class="app-icon">
           <div class="icon-circle phone-icon">
             <i class="fas fa-phone"></i>
           </div>
           <span class="app-label">Call</span>
         </a>
 
-        <a
-          href="https://github.com/yourprofile"
-          target="_blank"
-          class="app-icon"
-        >
+        <a href="https://github.com/sutha06" target="_blank" class="app-icon">
           <div class="icon-circle github-icon">
             <i class="fab fa-github"></i>
           </div>
@@ -77,7 +73,7 @@
         </a>
 
         <a
-          href="https://tryhackme.com/p/yourprofile"
+          href="https://tryhackme.com/p/suthakaran.siva0"
           target="_blank"
           class="app-icon"
         >
@@ -87,7 +83,7 @@
           <span class="app-label">TryHackMe</span>
         </a>
 
-        <a href="https://wa.me/1234567890" target="_blank" class="app-icon">
+        <a href="https://wa.me/4167107465" target="_blank" class="app-icon">
           <div class="icon-circle whatsapp-icon">
             <i class="fab fa-whatsapp"></i>
           </div>
@@ -102,7 +98,7 @@
         </a>
 
         <a
-          href="https://discord.com/users/youruserid"
+          href="https://discord.com/users/soupa_06"
           target="_blank"
           class="app-icon"
         >
@@ -116,7 +112,7 @@
       <div class="section-divider"></div>
 
       <div class="action-buttons">
-        <a href="your-resume.pdf" target="_blank" class="action-btn">
+        <a href="Suthakaran Resume.pdf" target="_blank" class="action-btn">
           <i class="fas fa-file-alt"></i>
           <span>View Resume</span>
         </a>
@@ -140,7 +136,7 @@
             For the optimal experience with animations and interactions, please
             view my portfolio on a desktop browser.
           </p>
-          <div class="modal-link">www.yourportfolio.com</div>
+          <div class="modal-link">www.apple.com</div>
           <button class="modal-btn" onclick="copyPortfolioLink()">
             <i class="fas fa-copy"></i> Copy Link
           </button>
