fixed some information

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
           <span class="app-label">TryHackMe</span>
         </a>
 
-        <a href="https://wa.me/4167107465" target="_blank" class="app-icon">
+        <a href="https://wa.me/+14167107465" target="_blank" class="app-icon">
           <div class="icon-circle whatsapp-icon">
             <i class="fab fa-whatsapp"></i>
           </div>
           <span class="app-label">WhatsApp</span>
         </a>
 
-        <a href="sms:+1234567890" class="app-icon">
+        <a href="sms:+14167107465" class="app-icon">
           <div class="icon-circle sms-icon">
             <i class="fas fa-comment"></i>
           </div>
