--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles.css" />
+
+    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
   </head>
   <body>
     <div class="container">
