--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       </div>
 
       <p class="bio-text">
-        Seeking Entry-Level/Internship opportunities in IT Support and System
-        Administration. Strong foundation in networking, operating systems,
-        configuration management, and cloud technologies.
+        Seeking Entry-Level/Internship opportunities in System Administration.
+        Strong foundation in networking, operating systems, configuration
+        management, and cloud technologies.
       </p>
 
       <div class="app-grid">
@@ -77,42 +77,6 @@
             <i class="fab fa-github"></i>
           </div>
           <span class="app-label">GitHub</span>
-        </a>
-
-        <a
-          href="https://tryhackme.com/p/suthakaran.siva0"
-          target="_blank"
-          class="app-icon"
-        >
-          <div class="icon-circle tryhackme-icon">
-            <i class="fas fa-user-shield"></i>
-          </div>
-          <span class="app-label">TryHackMe</span>
-        </a>
-
-        <a href="https://wa.me/+14167107465" target="_blank" class="app-icon">
-          <div class="icon-circle whatsapp-icon">
-            <i class="fab fa-whatsapp"></i>
-          </div>
-          <span class="app-label">WhatsApp</span>
-        </a>
-
-        <a href="sms:+14167107465" class="app-icon">
-          <div class="icon-circle sms-icon">
-            <i class="fas fa-comment"></i>
-          </div>
-          <span class="app-label">Message</span>
-        </a>
-
-        <a
-          href="https://discord.com/users/soupa_06"
-          target="_blank"
-          class="app-icon"
-        >
-          <div class="icon-circle discord-icon">
-            <i class="fab fa-discord"></i>
-          </div>
-          <span class="app-label">Discord</span>
         </a>
       </div>
 
