--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
@@ -30,70 +30,99 @@
     />
   </head>
   <body>
-    <div class="container">
-      <div class="profile-section">
+    <div class="card-container">
+      <!-- Hero Section with gradient background -->
+      <div class="hero-section">
         <div class="profile-photo">
           <img src="profile.jpg" alt="Suthakaran Siva" />
         </div>
-        <h1>Suthakaran Siva</h1>
-        <p class="title">IT Support & System Administration</p>
-        <p class="location">Toronto, Ontario, Canada</p>
+        <div class="hero-info">
+          <h1>Sutha Siva</h1>
+          <p class="job-title">System Administrator</p>
+          <p class="location">Toronto, Ontario, Canada</p>
+        </div>
       </div>
 
-      <p class="bio-text">
-        Seeking Entry-Level/Internship opportunities in System Administration.
-        Strong foundation in networking, operating systems, configuration
-        management, and cloud technologies.
-      </p>
-
-      <div class="app-grid">
+      <!-- Action Buttons -->
+      <div class="main-actions">
         <a
           href="https://www.linkedin.com/in/suthasiv/"
           target="_blank"
-          class="app-icon"
+          class="action-button linkedin-button"
         >
-          <div class="icon-circle linkedin-icon">
-            <i class="fab fa-linkedin-in"></i>
-          </div>
-          <span class="app-label">LinkedIn</span>
+          <i class="fab fa-linkedin-in"></i>
+          LinkedIn
         </a>
-
-        <a href="mailto:suthakaran.siva0601@gmail.com" class="app-icon">
-          <div class="icon-circle email-icon">
-            <i class="fas fa-envelope"></i>
-          </div>
-          <span class="app-label">Email</span>
-        </a>
-
-        <a href="tel:+14167107465" class="app-icon">
-          <div class="icon-circle phone-icon">
-            <i class="fas fa-phone"></i>
-          </div>
-          <span class="app-label">Call</span>
-        </a>
-
-        <a href="https://github.com/sutha06" target="_blank" class="app-icon">
-          <div class="icon-circle github-icon">
-            <i class="fab fa-github"></i>
-          </div>
-          <span class="app-label">GitHub</span>
+        <a
+          href="Suthakaran-Siva-Resume.pdf"
+          target="_blank"
+          class="action-button resume-button"
+        >
+          <i class="fas fa-file-alt"></i>
+          View Resume
         </a>
       </div>
 
-      <div class="section-divider"></div>
+      <!-- Bio Section -->
+      <div class="bio-section">
+        <h2>Bio</h2>
+        <p>
+          I'm Sutha, a Computer Science student focused on System
+          Administration. I bring hands-on experience with networking, operating
+          systems, configuration management, and cloud technologies. I'm looking
+          for an entry-level or internship opportunity to apply my technical
+          skills, tackle meaningful challenges, and grow as a professional.
+        </p>
+      </div>
 
-      <div class="action-buttons">
-        <a href="Suthakaran-Siva-Resume.pdf" target="_blank" class="action-btn">
-          <i class="fas fa-file-alt"></i>
-          <span>View Resume</span>
+      <!-- Contact Links -->
+      <div class="contact-links">
+        <a href="mailto:suthakaran.siva0601@gmail.com" class="contact-link">
+          <div class="link-icon-wrapper">
+            <div class="link-icon email-icon">
+              <i class="fas fa-envelope"></i>
+            </div>
+            <span>Email</span>
+          </div>
+          <i class="fas fa-chevron-right arrow"></i>
         </a>
+
+        <a href="tel:+14167107465" class="contact-link">
+          <div class="link-icon-wrapper">
+            <div class="link-icon phone-icon">
+              <i class="fas fa-phone"></i>
+            </div>
+            <span>Phone</span>
+          </div>
+          <i class="fas fa-chevron-right arrow"></i>
+        </a>
+
+        <a
+          href="https://github.com/sutha06"
+          target="_blank"
+          class="contact-link"
+        >
+          <div class="link-icon-wrapper">
+            <div class="link-icon github-icon">
+              <i class="fab fa-github"></i>
+            </div>
+            <span>GitHub</span>
+          </div>
+          <i class="fas fa-chevron-right arrow"></i>
+        </a>
+
         <a
           href="#"
           onclick="handlePortfolioClick(); return false;"
-          class="action-btn"
+          class="contact-link"
         >
-          <i class="fas fa-briefcase"></i>
-          <span>View Portfolio</span>
+          <div class="link-icon-wrapper">
+            <div class="link-icon portfolio-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <span>Portfolio</span>
+          </div>
+          <i class="fas fa-chevron-right arrow"></i>
         </a>
       </div>
 
@@ -107,7 +136,7 @@
             For the optimal experience with animations and interactions, please
             view my portfolio on a desktop browser.
           </p>
-          <div class="modal-link">www.apple.com</div>
+          <div class="modal-link">www.yourportfolio.com</div>
           <button class="modal-btn" onclick="copyPortfolioLink()">
             <i class="fas fa-copy"></i> Copy Link
           </button>
@@ -116,8 +145,6 @@
           </div>
         </div>
       </div>
-
-      <div class="footer">© 2025 SUTHAKARAN SIVA</div>
     </div>
 
     <!-- Custom Script -->
