--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
   </head>
   <body>
     <div class="card-container">
-      <!-- Hero Section with gradient background -->
-      <div class="hero-section">
-        <div class="profile-photo">
-          <img src="profile.jpg" alt="Suthakaran Siva" />
-        </div>
-        <div class="hero-info">
-          <h1>Sutha Siva</h1>
-          <p class="job-title">System Administrator</p>
-          <p class="location">Toronto, Ontario, Canada</p>
-        </div>
+      <!-- Large Hero Photo -->
+      <div class="hero-photo">
+        <img src="profile.jpg" alt="Suthakaran Siva" />
+      </div>
+
+      <!-- Info Card Overlay -->
+      <div class="info-card">
+        <h1>Suthakaran Siva</h1>
+        <p class="job-title">IT Support & System Administration</p>
+        <p class="location">Toronto, Ontario, Canada</p>
       </div>
 
       <!-- Action Buttons -->
@@ -67,11 +67,11 @@
       <div class="bio-section">
         <h2>Bio</h2>
         <p>
-          I'm Sutha, a Computer Science student focused on System
-          Administration. I bring hands-on experience with networking, operating
-          systems, configuration management, and cloud technologies. I'm looking
-          for an entry-level or internship opportunity to apply my technical
-          skills, tackle meaningful challenges, and grow as a professional.
+          I'm Sutha, a Computer Science student passionate about System
+          Administration. With a strong foundation in networking, operating
+          systems, and cloud technologies, I'm actively seeking entry-level or
+          internship opportunities where I can apply my technical skills, solve
+          real-world problems, and contribute to impactful projects.
         </p>
       </div>
 
