updated light theme mode

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- Info Card Overlay -->
       <div class="info-card">
         <h1>Suthakaran Siva</h1>
-        <p class="job-title">IT Support & System Administration</p>
+        <p class="job-title">Lunix System Administration</p>
         <p class="location">Toronto, Ontario, Canada</p>
       </div>
 
